--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <table id="members" class="hide">
       <thead>
         <tr>
-          <th>Navn</th>
-          <th>Aktiv</th>
-          <th>Fødselsdag</th>
-          <th>Alder</th>
-          <th>Gruppe</th>
+          <th id="sort-member-name">Navn</th>
+          <th id="sort-member-active">Aktiv</th>
+          <th id="sort-member-birthday">Fødselsdag</th>
+          <th id="sort-member-age">Alder</th>
+          <th id="sort-member-group">Gruppe</th>
         </tr>
       </thead>
       <tbody></tbody>
@@ -29,11 +29,11 @@
     <table id="results" class="hide">
       <thead>
         <tr>
-          <th>Dato</th>
-          <th>Medlem</th>
-          <th>Disciplin</th>
-          <th>Type</th>
-          <th>Tid</th>
+          <th data-action="sort" data-sortby="date">Dato</th>
+          <th data-action="sort" data-sortby="member">Medlem</th>
+          <th data-action="sort" data-sortby="disciplin">Disciplin</th>
+          <th data-action="sort" data-sortby="type">Type</th>
+          <th data-action="sort" data-sortby="time">Tid</th>
         </tr>
       </thead>
       <tbody></tbody>
