del 3 - punkt 5 II - kan nu sortere efter alle properties!

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
       <thead>
         <tr>
           <th data-action="sort" data-sortby="date">Dato</th>
-          <th data-action="sort" data-sortby="member">Medlem</th>
-          <th data-action="sort" data-sortby="disciplin">Disciplin</th>
+          <th data-action="sort" data-sortby="memberName">Medlem</th>
+          <th data-action="sort" data-sortby="discipline">Disciplin</th>
           <th data-action="sort" data-sortby="type">Type</th>
           <th data-action="sort" data-sortby="time">Tid</th>
         </tr>
