--- a/index.html
+++ b/index.html
@@ -11,33 +11,42 @@
   <h1>Medlemmer og Resultater</h1>
 
   <div id="tabs">
-    <h2 data-tab-show="members">Medlemmer</h2>
-    <h2 data-tab-show="results">Resultater</h2>
-    <table id="members" class="hide">
-      <thead>
-        <tr>
-          <th id="sort-member-name">Navn</th>
-          <th id="sort-member-active">Aktiv</th>
-          <th id="sort-member-birthday">Fødselsdag</th>
-          <th id="sort-member-age">Alder</th>
-          <th id="sort-member-group">Gruppe</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+    <h2 data-tab-show="members-tab">Medlemmer</h2>
+    <h2 data-tab-show="results-tab">Resultater</h2>
+    <div id="members-tab" class="hide">
+      <select name="membersfilter" id="membersfilter">
+        <option value="all">alle</option>
+        <option value="junior">junior</option>
+        <option value="senior">senior</option>
+      </select>
+      <table id="members">
+        <thead>
+          <tr>
+            <th id="sort-member-name">Navn</th>
+            <th id="sort-member-active">Aktiv</th>
+            <th id="sort-member-birthday">Fødselsdag</th>
+            <th id="sort-member-age">Alder</th>
+            <th id="sort-member-group">Gruppe</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
 
-    <table id="results" class="hide">
-      <thead>
-        <tr>
-          <th data-action="sort" data-sortby="date">Dato</th>
-          <th data-action="sort" data-sortby="memberName">Medlem</th>
-          <th data-action="sort" data-sortby="discipline">Disciplin</th>
-          <th data-action="sort" data-sortby="type">Type</th>
-          <th data-action="sort" data-sortby="time">Tid</th>
-        </tr>
-      </thead>
-      <tbody></tbody>
-    </table>
+    <div id="results-tab" class="hide">
+      <table id="results">
+        <thead>
+          <tr>
+            <th data-action="sort" data-sortby="date">Dato</th>
+            <th data-action="sort" data-sortby="memberName">Medlem</th>
+            <th data-action="sort" data-sortby="discipline">Disciplin</th>
+            <th data-action="sort" data-sortby="type">Type</th>
+            <th data-action="sort" data-sortby="time">Tid</th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </div>
 
 
   </div>
