Del 4 - punkt 14 - filter er færdig for members!

--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
     <h2 data-tab-show="results-tab">Resultater</h2>
     <div id="members-tab" class="hide">
       <select name="membersfilter" id="membersfilter">
-        <option value="all">alle</option>
-        <option value="junior">junior</option>
-        <option value="senior">senior</option>
+        <option value="group:all">alle</option>
+        <option value="age:18">18-årige</option>
+        <option value="active:1">aktive</option>
+        <option value="active:0">ikke-aktive</option>
+        <option value="group:junior">junior</option>
+        <option value="group:senior">senior</option>
       </select>
       <table id="members">
         <thead>
