Del 4 - færdig med sortering og filtrering

--- a/index.html
+++ b/index.html
@@ -37,6 +37,16 @@
     </div>
 
     <div id="results-tab" class="hide">
+      <select name="resultsfilter" id="resultsfilter">
+        <option value="all">alle</option>
+        <option value="discipline:breaststroke">bryst</option>
+        <option value="discipline:backstroke">ryg</option>
+        <option value="discipline:butterfly">butterfly</option>
+        <option value="discipline:freestyle">freestyle</option>
+        <option value="type:training">træning</option>
+        <option value="type:competition">stævne</option>
+
+      </select>
       <table id="results">
         <thead>
           <tr>
